--- a/prepros.cfg
+++ b/prepros.cfg
@@ -285,6 +285,31 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "e33ca9b2": {
+          "id": "e33ca9b2",
+          "path": "templates/QR.haml",
+          "output": "templates/QR.html",
+          "name": "QR.haml",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "doubleQuotes": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "haml"
+        },
+        "c5ec895e": {
+          "id": "c5ec895e",
+          "path": "templates/QR.html",
+          "output": "templates/QR.html",
+          "name": "QR.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
